# GenomeProfiler

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  LICENSE.txt  README.md  VERSION.txt  cli_interface.py  cli_main.py  collection_pipeline.py  config_genomeprofiler.ini  config_plasmidviz.ini  data_parser.py  environment.yml  genome_profiler  genome_profiler.bat  genome_profiler.py  genome_profiler.sh  genome_profiler_gui  genome_profiler_gui.sh  gui_file_upload.py  gui_frontend.py  install_resources.py  island_viewer.py  meta.yaml  ncbi_NZ_CP169016.fasta.list  ncbi_NZ_CP169017.1.fasta.list  ncbi_NZ_CP169017.fasta.list  ncbi_RR1_chromosome_(reversed).fasta.list  pyproject.toml  requirements-dev.txt  user_settings.json
.github/workflows/: bioconda-recipe.yml  ci.yml  ci_for_bioconda.yml  pylint.yml
bioconda/recipes/genome_profiler/: meta.yaml
genome_profiler/: cli_main.py  collection_pipeline.py  config_genomeprofiler.ini  data_parser.py  genome_profiler.py  gui_file_upload.py  gui_frontend.py  install_resources.py  island_viewer.py
template/: .env
