[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "genome-profiler"
version = "0.4.2-test.2"
description = "Prokaryotic genome and plasmid profiling pipeline"
authors = [{ name = "Jacob Alford", email = "jalford0000@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
dependencies = [
  "ratelimit",
  "requests-toolbelt",
  "python-dotenv",
  "lxml",
  "pycurl"
]

[project.scripts]
genome_profiler = "genome_profiler:main"

[tool.setuptools]
py-modules = ["genome_profiler" , "collection_pipeline" , "data_parser" , "gui_file_upload" , "gui_frontend" , "install_resources" , "island_viewer"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["config_genomeprofiler.ini" , "user_settings.json"]
