[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "genome_profiler"
version = "0.4.2rc12"
description = "Prokaryotic genome and plasmid profiling pipeline"
authors = [{ name = "Jacob Alford", email = "jalford0000@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause-Patent"
dependencies = [
  "ratelimit",
  "requests-toolbelt",
  "python-dotenv",
  "lxml",
  "pycurl"
]

[project.scripts]
genome_profiler = "genome_profiler:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"genome_profiler" = ["config_genomeprofiler.ini" , "user_settings.json" , ".env"]
